--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Hide spin buttons on number inputs for a cleaner look */
+@layer base {
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  input[type='number'] {
+    -moz-appearance: textfield;
+  }
+}
+
 @layer base {
   :root {
     --background: 0 0% 93.3%;
